# omemepo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.handoffs/: 2026-04-21-omemepo-skeleton.md
docs/: architecture.md
plugins/voitta-misc/: README.md
plugins/voitta-misc/.claude-plugin/: plugin.json
src/omemepo/: __init__.py  __main__.py  cli.py  mcp.py  pack.py  publish.py  redact.py  unpack.py
