[project]
name = "omemepo"
version = "0.0.1"
description = "Portable Claude Code profiles and Voitta marketplace."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Voitta" }]
dependencies = [
    "typer>=0.12",
]

[project.scripts]
omemepo = "omemepo.cli:app"

[project.urls]
Homepage = "https://github.com/voitta-ai/voitta-omemepo"
Repository = "https://github.com/voitta-ai/voitta-omemepo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omemepo"]
